--- a/schoolhand/index.html
+++ b/schoolhand/index.html
@@ -135,7 +135,7 @@
             <div class="row ">
 
                 <!--物品示例1-->
-                <div class="col-md-2 goods-container ">
+                <div class="col-md-2 goods-container index-cursor">
                     <div class="goods-img-height">
                         <img class="goods-img-line" src="../picture/goods1.png">
 
@@ -152,7 +152,7 @@
                 </div>
 
                 <!--物品示例2-->
-                <div class="col-md-2 goods-container ">
+                <div class="col-md-2 goods-container index-cursor">
                     <div class="goods-img-height">
                         <img class="goods-img-line" src="../picture/good10.png">
 
@@ -169,7 +169,7 @@
                 </div>
 
                 <!--物品示例3-->
-                <div class="col-md-2 goods-container ">
+                <div class="col-md-2 goods-container index-cursor">
                     <div class="goods-img-height">
                         <img class="goods-img-line" src="../picture/good007.png">
 
@@ -186,7 +186,7 @@
                 </div>
 
                 <!--物品示例4-->
-                <div class="col-md-2 goods-container ">
+                <div class="col-md-2 goods-container index-cursor">
                     <div class="goods-img-height">
                         <img class="goods-img-line" src="../picture/goods8.png">
 
@@ -203,7 +203,7 @@
                 </div>
 
                 <!--物品示例5-->
-                <div class="col-md-2 goods-container ">
+                <div class="col-md-2 goods-container index-cursor">
                     <div class="goods-img-height">
                         <img class="goods-img-line" src="../picture/goods3.png">
 
@@ -222,7 +222,7 @@
 
                 <div class="row">
                     <!--物品示例6-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods11.png">
 
@@ -239,7 +239,7 @@
                     </div>
 
                     <!--物品示例7-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods11.png">
 
@@ -255,7 +255,7 @@
                         </div>
                     </div>
                     <!--物品示例8-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods11.png">
 
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <!--物品示例9-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods11.png">
 
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                     <!--物品示例10-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods11.png">
 
@@ -309,7 +309,7 @@
                 <div class="row ">
 
                     <!--物品示例1-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods1.png">
 
@@ -326,7 +326,7 @@
                     </div>
 
                     <!--物品示例2-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/good10.png">
 
@@ -343,7 +343,7 @@
                     </div>
 
                     <!--物品示例3-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/good007.png">
 
@@ -360,7 +360,7 @@
                     </div>
 
                     <!--物品示例4-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods8.png">
 
@@ -377,7 +377,7 @@
                     </div>
 
                     <!--物品示例5-->
-                    <div class="col-md-2 goods-container ">
+                    <div class="col-md-2 goods-container index-cursor">
                         <div class="goods-img-height">
                             <img class="goods-img-line" src="../picture/goods3.png">
 
@@ -401,7 +401,7 @@
         <nav>
             <div class="col-sm-offset-4 col-sm-4">
                 <ul class="pagination ">
-                    <li class="disabled"><a href="#"> &laquo;</a></li>
+                    <li class=""><a href="#"> &laquo;</a></li>
                     <li class="active"><a href="#">1</a></li>
                     <li><a href="#">2</a></li>
                     <li><a href="#">3</a></li>
@@ -410,8 +410,6 @@
                     <li><a href="#">6</a></li>
                     <li><a href="#">7</a></li>
                     <li><a href="#">8</a></li>
-                    <li><a href="#">9</a></li>
-                    <li><a href="#">10</a></li>
                     <li class=""><a href="#"> &raquo;</a></li>
                 </ul>
             </div>
@@ -420,10 +418,10 @@
     <!--footer-->
     <nav class="index-footer">
         <div class="col-sm-offset-2 col-sm-8  ">
-            <a class="text-primary ">关于校园助手</a><span>|</span>
-            <a class="text-primary">服务条款</a><span>|</span>
+            <a class="text-primary index-cursor">关于校园助手</a><span>|</span>
+            <a class="text-primary index-cursor">服务条款</a><span>|</span>
             <span>©2016 - 2016 SchoolHand Inc. All Rights Reserved</span>
-            <a class="text-primary">联系我们</a>
+            <a class="text-primary index-cursor">联系我们</a>
         </div>
     </nav>
 </div>
